--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -4,14 +4,15 @@
     package="com.unity3d.player"
     xmlns:tools="http://schemas.android.com/tools">
     <application>
-        <activity android:name="com.unity3d.player.UnityPlayerActivity"
-				  android:exported="true"
-                  android:theme="@style/UnityThemeSelector">
-            <intent-filter> 
+        <activity android:name="net.sanukin.OverrideUnityActivity" 
+                android:label="@string/app_name"
+                android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <meta-data android:name="unityplayer.UnityActivity" android:value="true" />
         </activity>
+        <meta-data android:name="unityplayer.SkipPermissionsDialog" android:value="true" />
     </application>
+    <uses-feature android:name="android.hardware.camera" />
 </manifest>
