--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
+    "com.nobi.roundedcorners": "https://github.com/kirevdokimov/Unity-UI-Rounded-Corners.git",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.analytics": "3.6.11",
-    "com.unity.collab-proxy": "1.10.2",
+    "com.unity.collab-proxy": "1.12.5",
     "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.4",
     "com.unity.mobile.android-logcat": "1.2.3",
